# mongot

./: .bazeliskrc  .gitignore  .pre-commit-config.yaml  BUILD  Makefile  Makefile.internal.mk  README.md  WORKSPACE
bazel/: bazel_deps.bzl  deps.bzl  init_bazel_deps.bzl  init_deps.bzl  repos.bzl
bazel/cc/: bazel_deps.bzl  repos.bzl
bazel/common/: repos.bzl
bazel/java/: deps.bzl  jdk_config.bzl  maven_pin_info.json  maven_search_query.MODULE.bazel  package.bzl  systems_deps.bzl
bazel/java/generated_pom/: pom.xml
bazel/javascript/: deps.bzl
bazel/llvm/: bazel_deps.bzl  init_bazel_deps.bzl  repos.bzl
bazel/python/: BUILD
bazel/rust/prost/: config.bzl
bazel/tools/: repos.bzl
community-quick-start/: Dockerfile.local  README.md  docker-compose.yml  docker_down.sh  docker_up.sh  init-mongo.sh  mongod.conf  mongot.conf
conf/lnav/: mongot-log-format.json
deploy/: BUILD
deploy/community-resources/LICENSE/: THIRD_PARTY_NOTICES.txt
scripts/ci/: affected_tests.py  prepare-docker-config.sh
scripts/perf/: generate_ground_truth.py
scripts/pre-commit/: kingfisher-precommit.sh
scripts/sysroots/: generate_sysroot.sh
scripts/tools/testing/: update_json_tests_explain.py
src/main/c/: BUILD
src/test/unit/java/com/xgen/mongot/embedding/config/: BUILD.bazel  MaterializedViewCollectionMetadataCatalogTest.java
src/test/unit/java/com/xgen/mongot/embedding/mongodb/leasing/: BUILD.bazel  DynamicLeaderLeaseManagerTest.java  LeaseTest.java  StaticLeaderLeaseManagerTest.java
src/test/unit/resources/featureflag/: featureFlagsDeserialization.json  featureFlagsSerialization.json
src/test/unit/resources/index/: index-generation-metrics-deserialization.json  index-generation-metrics-serialization.json  (+4 more)
(+435 files in other folders)
