load("//bazel/java:test.bzl", "java_test_suite")

java_test_suite(
    name = "config",
    srcs = [
        "MaterializedViewCollectionMetadataCatalogTest.java",
    ],
    tags = ["unit"],
    deps = [
        "//src/main/java/com/xgen/mongot/embedding/config",
        "//src/main/java/com/xgen/mongot/index/version",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_mongodb_bson",
    ],
)
